# sprottenflotte_pred_tool

./: .gitignore  README.md  app.py  app_functions.py  data.py  predictions.py  predictions_dl.py  predictions_rf.py  predictions_test.py  pyproject.toml  requirements.txt  sample.env  station_data_with_subareas_new.csv  test.ipynb
.streamlit/: config.toml
data/: 5pred_biLSTM_whole_weights.pth  biLSTM_whole_weights.pth  bike_to_weather_station.csv  data_temp.csv  predictions.csv  predictions_dl.csv  predictions_random_forest.csv  predictions_rf.csv  scaler_X.joblib  scaler_rf.joblib  scaler_y.joblib  scaler_y_2.joblib  station_data_with_subareas_new.csv  stations.csv  stations_2.csv  test_data_for_model.csv  weather_data_temp.csv  weather_station.csv
models/: scaler_X.joblib
pred_tool/: .gitignore  app.py  data.py  model.py  pyproject.toml
