[tool.poetry]
name = "sprottenflotte_pred_tool"
version = "0.1.0"
description = ""
authors = ["Claas Resow <claas.resow@dwins.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.37.1"
pyyaml = "^6.0.2"
pandas = "^2.2.2"
plotly = "^5.24.1"
numpy = "^2.1.3"
requests = "^2.32.3"
python-dotenv = "^1.0.1"
torch = "^2.5.1"
joblib = "^1.4.2"
scikit-learn = "^1.5.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
main = "sprottenflotte_pred_tool.main:main"